[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juego/Estaciones/AreaRecarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estaciones/CargaEstacion.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/EstacionVacio.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 78.2946
height = 130.465

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Activado"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
visible = false
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
texture = ExtResource( 2 )

[node name="AreaRecarga" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 1000.0
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
visible = false
scale = Vector2( 35.2093, 37.2826 )
shape = SubResource( 2 )

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.12549, 0.698039, 0.898039, 0.133333 )
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Activado"
anims/Activado = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="Carga_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Vacio_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
